--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@nextui-org/react": "^2.2.9",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "clsx": "^2.1.0",
-    "react-icons": "^5.0.1",
-    "tailwind-merge": "^2.2.1",
-    "firebase": "^10.8.0",
+    "firebase": "^10.6.0",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.0.1",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
