--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.0.1",
+    "react-tsparticles": "^2.9.3",
+    "tsparticles": "^2.9.3",
+    "tailwind-scrollbar": "^3.0.4",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
