--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@vercel/analytics": "^1.2.2",
     "clsx": "^2.1.0",
     "firebase": "^10.6.0",
     "framer-motion": "^11.0.5",
@@ -20,9 +21,9 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.0.1",
     "react-tsparticles": "^2.9.3",
-    "tsparticles": "^2.9.3",
+    "tailwind-merge": "^2.2.1",
     "tailwind-scrollbar": "^3.0.4",
-    "tailwind-merge": "^2.2.1"
+    "tsparticles": "^2.9.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
