--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.1.0",
     "firebase": "^10.6.0",
     "framer-motion": "^11.0.5",
-    "next": "14.1.0",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
